[package]
name = "rusty_chip_8"
version = "0.1.0"
authors = ["Khopa <clemguip@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rodio = "0.15.0"
clap = { version = "3.2.17", features = ["derive"] }
fermium = { version = "20014", features = ["experimental_fast_build"] }
